# DePINZcash

./: .gitignore  README.md  docker-compose.extra-node.yml
docs/: DEPLOY.md  RUN_FULLNODE_VI.md
programs/zepin-claim/: Anchor.toml  README.md
programs/zepin-claim/programs/zepin-claim/: Cargo.toml
programs/zepin-claim/programs/zepin-claim/src/: lib.rs
prover/: Cargo.toml
prover/src/: proof_gen.rs
scripts/: depinzcash-compose-node.sh  depinzcash-node.sh  dev-server.sh
server/: .env.example  Cargo.toml  Dockerfile  fly.toml
server/migrations/: 0001_initial.sql
server/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  merkle.rs  rpc.rs  scheduler.rs  state.rs  types.rs
server/src/api/: admin.rs  challenges.rs  health.rs  mod.rs  nodes.rs  proofs.rs  rewards.rs  stats.rs
server/src/store/: sqlite.rs
server/tests/: adversarial_proof.rs  adversarial_register.rs  challenges_http.rs  concurrency.rs  e2e_register_and_proof.rs  health_info_cors.rs  snapshots.rs  store_conformance.rs
web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
web/src/components/: AppFooter.tsx  AppHeader.tsx  Loading.tsx  TokenCA.tsx
web/src/lib/: api.ts  claim.ts  config.ts  format.ts  wallet.tsx
web/src/pages/: Dashboard.tsx  Explorer.tsx  Home.tsx  Leaderboard.tsx  NodeDetail.tsx  NotFound.tsx  Register.tsx  RunLightwalletd.tsx  RunNode.tsx
